<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"  >
    
    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_main"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
         android:id="@+id/ButtonPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
         android:text="@string/title_activity_play" 
         android:layout_below="@+id/main"/>
    
    <Button
         android:id="@+id/ButtonSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:text="@string/title_activity_settings" 
         android:layout_below="@+id/ButtonPlay"/>
    
    
      <Button
         android:id="@+id/ButtonScores"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:text="@string/title_activity_scores" 
         android:layout_below="@+id/ButtonSettings"/>
   
    

</RelativeLayout>
