<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_settings_es"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<EditText
	    android:id="@+id/userbox"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text" 
	    android:layout_marginLeft="96dp"
	    android:layout_marginTop="30dp"
	     android:layout_below="@+id/settings"/>
	
  	<TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:text="@string/name_settings_es"
        android:layout_below="@+id/settings"/>
  	
  	<Spinner
   		android:id="@+id/number_helps"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	 android:layout_marginLeft="190dp"
	    android:layout_marginTop="30dp"
    	android:layout_below="@+id/userbox" />
  	
  	<TextView
        android:id="@+id/number_helps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="145dp"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:text="@string/number_helps_es"
        android:layout_below="@+id/user"/>
  	
  	<Button
  	    android:id="@+id/button_friend"
  	     android:layout_marginTop="40dp"
  	     android:layout_marginLeft="15dp"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_below="@+id/number_helps_text"
  	    android:text="@string/add_friend_es" />
  	
	<EditText
	    android:id="@+id/friendbox"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text" 
	    android:layout_marginLeft="140dp"
	    android:layout_marginTop="43dp"
	    android:layout_below="@+id/number_helps"/>
  	
</RelativeLayout>
